packages/react-components/src/action-form/BaseForm.module.css
/*
 * Copyright 2025 Palantir Technologies, Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.osdkForm {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.osdkFormFields {
  display: flex;
  flex-direction: column;
  gap: var(--osdk-form-field-gap);
  padding: var(--osdk-form-content-padding);
}

.osdkFormFooter {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border-top: var(--osdk-surface-border-width) solid
    var(--osdk-form-footer-border-color);
  padding-block: var(--osdk-form-content-padding);
  padding-inline: var(--osdk-form-content-padding);
}

.osdkFormSubmitButton {
  margin-inline-start: auto;
}

.osdkFormErrorIndicator {
  display: flex;
  align-items: center;
  gap: calc(var(--osdk-surface-spacing) * 2);
  color: var(--osdk-form-footer-error-color);
  font-size: var(--osdk-form-footer-error-font-size);
  cursor: help;

  /*
 * FIX: The SVG icon appears truncated/invisible because the path coordinates
 * (approx x:80, y:100) are far outside the defined viewBox="0 0 16 16".
 * Since the SVG markup/viewBox cannot be modified directly, we force
 * overflow: visible to allow the path to be rendered outside the
 * clipping boundary of the SVG container.
 */
  & svg {
    overflow: visible;
  }
}

.osdkFormErrorList {
  list-style: none;
  margin: 0;
  padding: 0;
}

